--- a/app/src/main/res/layout/fragment_today_weather.xml
+++ b/app/src/main/res/layout/fragment_today_weather.xml
@@ -11,7 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:visibility="gone">
 
         <TextView
             android:id="@+id/text_city_name"
@@ -21,7 +22,6 @@
             android:textColor="@color/colorPrimary"
             android:textSize="24sp"
             android:textStyle="bold" />
-
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -83,7 +83,7 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/cell"
                     android:text="Wind"
-                    tools:textColor="@color/colorBlack" />
+                    android:textColor="@color/colorBlack" />
 
                 <TextView
                     android:id="@+id/text_wind"
@@ -92,7 +92,7 @@
                     android:layout_column="1"
                     android:layout_marginLeft="8dp"
                     android:text="Speed: 1 Deg 1"
-                    tools:textColor="@color/colorBlack" />
+                    android:textColor="@color/colorBlack" />
             </TableRow>
 
             <TableRow
@@ -105,7 +105,7 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/cell"
                     android:text="Pressure"
-                    tools:textColor="@color/colorBlack" />
+                    android:textColor="@color/colorBlack" />
 
                 <TextView
                     android:id="@+id/text_pressure"
@@ -114,7 +114,7 @@
                     android:layout_column="1"
                     android:layout_marginLeft="8dp"
                     android:text="10132.hpa"
-                    tools:textColor="@color/colorBlack" />
+                    android:textColor="@color/colorBlack" />
             </TableRow>
 
 
@@ -128,7 +128,7 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/cell"
                     android:text="Humidity"
-                    tools:textColor="@color/colorBlack" />
+                    android:textColor="@color/colorBlack" />
 
                 <TextView
                     android:id="@+id/text_humidity"
@@ -137,7 +137,7 @@
                     android:layout_column="1"
                     android:layout_marginLeft="8dp"
                     android:text="100%"
-                    tools:textColor="@color/colorBlack" />
+                    android:textColor="@color/colorBlack" />
             </TableRow>
 
             <TableRow
@@ -150,7 +150,7 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/cell"
                     android:text="Sunrise"
-                    tools:textColor="@color/colorBlack" />
+                    android:textColor="@color/colorBlack" />
 
                 <TextView
                     android:id="@+id/text_sunrise"
@@ -159,7 +159,7 @@
                     android:layout_column="1"
                     android:layout_marginLeft="8dp"
                     android:text="5"
-                    tools:textColor="@color/colorBlack" />
+                    android:textColor="@color/colorBlack" />
             </TableRow>
 
             <TableRow
@@ -172,7 +172,7 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/cell"
                     android:text="Sunset"
-                    tools:textColor="@color/colorBlack" />
+                    android:textColor="@color/colorBlack" />
 
                 <TextView
                     android:id="@+id/text_sunset"
@@ -181,7 +181,7 @@
                     android:layout_column="1"
                     android:layout_marginLeft="8dp"
                     android:text="6"
-                    tools:textColor="@color/colorBlack" />
+                    android:textColor="@color/colorBlack" />
             </TableRow>
 
             <TableRow
@@ -194,7 +194,7 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/cell"
                     android:text="Geo coords"
-                    tools:textColor="@color/colorBlack" />
+                    android:textColor="@color/colorBlack" />
 
                 <TextView
                     android:id="@+id/text_geo_coords"
@@ -203,8 +203,15 @@
                     android:layout_column="1"
                     android:layout_marginLeft="8dp"
                     android:text="[32.0,-81.0]"
-                    tools:textColor="@color/colorBlack" />
+                    android:textColor="@color/colorBlack" />
             </TableRow>
         </TableLayout>
     </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/loading"
+        android:indeterminate="true"
+        android:layout_centerInParent="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </RelativeLayout>
